# swamid-satosa

./: .gitignore  .jenkins.yaml  setup.cfg
.github/workflows/: publish-to-pypi.yml
examples/: healthcheck.yaml  metainfo.yaml  mfaflagger.yaml  site_selector.yaml
src/swamid_plugins/assurance/: service.py
src/swamid_plugins/attributes/: __init__.py
src/swamid_plugins/audit_log/: __init__.py
src/swamid_plugins/eppn_mapper/: __init__.py
src/swamid_plugins/metainfo/: metainfo.py
src/swamid_plugins/metainfo/collectors/: oidc.py  saml.py
src/swamid_plugins/profiler/: __init__.py
src/swamid_plugins/scope_filter/: __init__.py
src/swamid_plugins/site_selector/: __init__.py
