[metadata]
name = swamid-plugins
version = file:VERSION
description = swamid plugins for the satosa proxy
license = Apache License Version 2.0
requires_dist = setuptools

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    SATOSA >= 7.0.3
    Jinja2

[options.packages.find]
where = src

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/SUNET/swamid-satosa"
Issues = "https://github.com/SUNET/swamid-satosa/issues"
